work on model and finish status

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,91 +3,61 @@
   <img width="40" alt="Attackers Logo" src="assets/attackers.png" />
   <span>Xs and Os Attackers</span>
   <div class="spacer"></div>
-  <a aria-label="Xs and Os Attackers" target="_blank" rel="noopener" href="" title="Attackers">
+  <a aria-label="Xs and Os Attackers" href="" title="Attackers">
 
   </a>
 </div>
 
 <div class="content" role="main">
 
-
   <!-- Resources -->
   <h2>Attackers</h2>
   <p>Xs and Os</p>
 
   <div class="card-container">
-    <a class="card" target="_blank" rel="noopener" href="Javascript:void(0);">
+    <input type="text" id="gameStatus" [(ngModel)]="gameStatus" [ngModelOptions]="{standalone: true}" hidden="false" />
 
+    <a class="card tile-button" id="0" href="Javascript:void(0);">
       <span></span>
-
     </a>
 
-    <a class="card" target="_blank" rel="noopener" href="Javascript:void(0);">
-
-
+    <a class="card tile-button" id="1" href="Javascript:void(0);">
       <span></span>
-
-
     </a>
 
-    <a class="card" target="_blank" rel="noopener" href="Javascript:void(0);">
-
-
+    <a class="card tile-button" id="2" href="Javascript:void(0);">
       <span></span>
-
-
     </a>
 
-    <a class="card" target="_blank" rel="noopener" href="Javascript:void(0);">
-
+    <a class="card tile-button" id="3" href="Javascript:void(0);">
       <span></span>
-
     </a>
 
-    <a class="card" target="_blank" rel="noopener" href="Javascript:void(0);">
-
-
+    <a class="card tile-button" id="4" href="Javascript:void(0);">
       <span></span>
-
-
     </a>
 
-    <a class="card" target="_blank" rel="noopener" href="Javascript:void(0);">
-
-
+    <a class="card tile-button" id="5" href="Javascript:void(0);">
       <span></span>
-
-
     </a>
 
-    <a class="card" target="_blank" rel="noopener" href="Javascript:void(0);">
-
+    <a class="card tile-button" id="6" href="Javascript:void(0);">
       <span></span>
-
     </a>
 
-    <a class="card" target="_blank" rel="noopener" href="Javascript:void(0);">
-
-
+    <a class="card tile-button" id="7" href="Javascript:void(0);">
       <span></span>
-
-
     </a>
 
-    <a class="card" target="_blank" rel="noopener" href="Javascript:void(0);">
-
-
+    <a class="card tile-button" id="8" href="Javascript:void(0);">
       <span></span>
-
-
     </a>
-
   </div>
 
   <!-- Footer -->
   <footer>
     Attackers &nbsp;
-    <a href="https://github.com/angular/angular" target="_blank" rel="noopener"> Give our repo a star.
+    <a href="https://github.com/anilbobba1/attackers"> Give our repo a star.
       <div class="github-star-badge">
         <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path d="M0 0h24v24H0z" fill="none" />
@@ -95,7 +65,7 @@
         Star
       </div>
     </a>
-    <a href="https://github.com/angular/angular" target="_blank" rel="noopener">
+    <a href="https://github.com/anilbobba1/attackers">
       <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z" fill="#1976d2" />
         <path d="M0 0h24v24H0z" fill="none" /></svg>
